# opm-parser

./: CMakeLists.txt
opm/parser/eclipse/: CMakeLists.txt
opm/parser/eclipse/EclipseState/: EclipseState.cpp
opm/parser/eclipse/EclipseState/Grid/: Box.cpp  Box.hpp
opm/parser/eclipse/EclipseState/Tables/: ColumnLookup.cpp  ColumnLookup.hpp  MultiRecordTable.cpp  MultiRecordTable.hpp  PLYADSSTable.cpp  PLYADSSTable.hpp  PlyadsTable.hpp  PlyshlogTable.hpp  PvtgOuterTable.hpp  PvtoOuterTable.hpp  SimpleTable.cpp  SimpleTable.hpp  TableColumn.cpp  TableColumn.hpp
opm/parser/eclipse/EclipseState/Tables/tests/: CMakeLists.txt  MultiRecordTableTests.cpp  PLYADSSTableTests.cpp  TableColumnTests.cpp  TableManagerTests.cpp  TableTests.cpp
opm/parser/eclipse/IntegrationTests/: BoxTest.cpp
opm/parser/eclipse/Parser/: ParserKeyword.cpp  ParserKeyword.hpp
opm/parser/eclipse/python/: CMakeLists.txt
opm/parser/eclipse/python/c_inter/: CMakeLists.txt  cparser.cc
opm/parser/eclipse/python/cmake/: python.cmake
opm/parser/eclipse/python/python/opm/: CMakeLists.txt  __init__.py
opm/parser/eclipse/python/python/opm/deck/: deck.py  deck_item.py  deck_keyword.py  deck_record.py  item_type_enum.py  keyword.py
opm/parser/eclipse/python/python/opm/ecl_state/: table_manager.py
opm/parser/eclipse/python/python/opm/log/: opm_log.py
opm/parser/eclipse/python/python/opm/parser/: CMakeLists.txt  error_action.py  parse_mode.py  parser.py
opm/parser/eclipse/python/tests/: CMakeLists.txt
testdata/integration_tests/POLYMER/: plyadss.data
(+5 files in other folders)
